<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:animateLayoutChanges="true"
        android:layout_height="match_parent"
        android:background="@color/background">
    <LinearLayout
            android:orientation="vertical"
            android:animateLayoutChanges="true"
            android:background="@color/background"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <TextView
            android:textSize="15sp"
            android:layout_gravity="start"
            android:id="@+id/joze_tv"
            android:paddingStart="8dp"
            android:paddingTop="5dp"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <TextView android:layout_width="match_parent"
              android:textSize="18sp"
              android:id="@+id/surah_name_tv"
              android:layout_gravity="center"
              android:gravity="center"
              android:padding="8dp"
              android:textColor="@color/white"
              android:background="@color/colorPrimary"
              android:layout_height="wrap_content"/>

        <jetpack.randa.com.ayahandamal.OthmaniTextView
                android:textColor="@color/colorPrimary"
                android:id="@+id/basmalah"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/basmalah"
                android:layout_marginBottom="16dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <android.support.v7.widget.RecyclerView
                android:id="@+id/ayah_rv"
                android:nestedScrollingEnabled="false"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

</LinearLayout>
    <android.support.constraint.ConstraintLayout
            android:id="@+id/coach_mark"
            android:visibility="gone"
            android:background="@color/coach_mark"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:id="@+id/coachmark_tv"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="0dp"
                android:textColor="@color/white"
                android:layout_margin="24dp"
                android:textSize="24sp"
                android:text="@string/show_hint"
                app:layout_constraintBottom_toTopOf="@+id/coachmark_btn"
                android:layout_height="wrap_content"/>
        <Button
                android:id="@+id/coachmark_btn"
                android:minHeight="0dp"
                app:layout_constraintTop_toBottomOf="@+id/coachmark_tv"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="wrap_content"
                android:background="@color/white"
                android:padding="2dp"
                android:textColor="@color/colorPrimary"
                android:text="@string/ok"
                android:layout_height="wrap_content"/>


    </android.support.constraint.ConstraintLayout>
</FrameLayout>