<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
            android:visibility="gone"
            android:id="@+id/home_empty_state_layout"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
                <ImageView
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/empty_state_new_work"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_work"
                android:layout_margin="16dp"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/colorAccent"
                android:layout_gravity="center"
        />
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
            android:id="@+id/work_list_rv"
            android:layout_gravity="top"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:clickable="true"
            android:focusable="true"
            app:srcCompat="@drawable/ic_add"
            android:layout_gravity="bottom|end"
            app:layout_anchorGravity="bottom|end"/>
    <FrameLayout
            android:visibility="gone"
            android:id="@+id/coachmark"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <jetpack.randa.com.ayahandamal.CircleOverlayView
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_gravity="start"
                android:layout_marginTop="64dp"
                android:layout_marginBottom="64dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:textColor="@color/white"
                android:text="@string/coach_mark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <ImageView
                android:src="@drawable/arrow"
                android:tint="@color/white"
                android:layout_gravity="end"
                android:layout_marginTop="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <Button
                android:id="@+id/coachmark_btn"
                android:minHeight="0dp"
                android:layout_gravity="start"
                android:layout_marginStart="16dp"
                android:text="@string/ok"
                android:textColor="@color/colorPrimary"
                android:background="@color/white"
                android:padding="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>
    </FrameLayout>
</android.support.design.widget.CoordinatorLayout>