<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.Add3amalActivity">
    <ImageView
            android:id="@+id/back_btn"
            app:srcCompat="@drawable/ic_iback"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_width="18dp"
            android:layout_height="18dp"/>
    <TextView
            android:id="@+id/instructions"
            android:layout_marginTop="32dp"
            android:layout_width="140dp"
            android:gravity="start"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/quran_img"
            android:text="@string/enter_ayah_desc"/>
    <ImageView
            android:id="@+id/quran_img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            android:src="@drawable/quran_img"
            app:layout_constraintStart_toEndOf="@+id/instructions"
            android:layout_width="100dp"
            android:layout_height="80dp"/>

    <android.support.v7.widget.CardView
            android:layout_width="0dp"
            app:cardCornerRadius="30dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintTop_toBottomOf="@+id/quran_img"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
        <LinearLayout
                android:orientation="vertical"
                android:padding="8dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <Spinner
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:id="@+id/surah_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:id="@+id/ayah_txt"
                    android:maxLines="4"
                    android:layout_margin="16dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <View
                    android:background="@color/colorPrimary"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="0.8dp"/>
            <Spinner
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:id="@+id/ayah_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <View
                    android:background="@color/colorPrimary"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="0.8dp"/>
            <EditText
                    android:id="@+id/al3amal_et"
                    android:gravity="bottom|start"
                    android:padding="8dp"
                    android:hint="@string/insert_aml"
                    android:textColor="@color/colorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="170dp"/>
            <android.support.constraint.ConstraintLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <Switch
                        android:layout_marginTop="10dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:id="@+id/notification_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:switchPadding="10dp"
                        android:textColor="@color/colorPrimary"
                        app:layout_constraintEnd_toStartOf="@id/button_save"
                        android:text="@string/remind_me"/>
                <android.support.v7.widget.CardView
                        android:layout_marginTop="5dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/notification_switch"
                        android:id="@+id/button_save"
                        android:background="@color/background"
                        app:cardCornerRadius="10dp"
                        app:cardBackgroundColor="@color/background"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    <TextView
                            android:paddingStart="8dp"
                            android:paddingEnd="8dp"
                            android:layout_margin="10dp"
                            android:textColor="@color/colorPrimary"
                            android:background="@color/background"
                            android:text="@string/enter_amal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                </android.support.v7.widget.CardView>
            </android.support.constraint.ConstraintLayout>


        </LinearLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>